--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -88,6 +88,8 @@
       <_ContentIncludedByDefault Remove="Components\Liquidity\Market\MarketMakerRowComponent.razor" />
       <_ContentIncludedByDefault Remove="Components\Templates\TemplateDetailsDialogEdit.razor" />
       <_ContentIncludedByDefault Remove="Components\Templates\TemplatesComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\ExternalMarkets\ExernalMarketComponent.razor" />
+      <_ContentIncludedByDefault Remove="Components\Liquidity\ExternalMarkets\ExternalMarketOrderBookComponent.razor" />
     </ItemGroup>
 
     <ItemGroup>
