--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -46,6 +46,7 @@
       <PackageReference Include="MyJetWallet.Service.IndexPrices.Client" Version="1.2.1" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Converter.Client" Version="1.1.2" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Engine.Client" Version="1.4.2" />
+      <PackageReference Include="MyJetWallet.Service.Liquidity.InternalWallets.Client" Version="1.0.2" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Monitoring.Client" Version="1.0.4" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Portfolio.Client" Version="1.6.9" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.PortfolioHedger.Client" Version="1.1.7" />
