--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -66,6 +66,7 @@
       <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
       <PackageReference Include="Radzen.Blazor" Version="3.9.5" />
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
+      <PackageReference Include="SimpleTrading.CandlesHistory.Grpc" Version="1.0.15" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.14" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.9" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
