--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -58,6 +58,7 @@
       <PackageReference Include="MyJetWallet.Service.SmsSender.Client" Version="1.2.3" />
       <PackageReference Include="MyJetWallet.Service.Simulation.FTX.Client" Version="1.2.6" />
       <PackageReference Include="MyJetWallet.Service.Simulation.Binance.Client" Version="1.0.3" />
+      <PackageReference Include="MyJetWallet.Service.UserActivityObserver.Client" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.WalletObserver.Client" Version="1.0.1" />
       <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.3.1" />
       <PackageReference Include="MyNoSqlServer.DataReader" Version="1.3.1" />
