--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -28,6 +28,7 @@
       <PackageReference Include="MyCrm.AutoOwnerProfiles.Grpc" Version="1.0.1" />
       <PackageReference Include="MyCrm.MyCrmTradersUtmParametersGrpcContracts" Version="1.0.3" />
       <PackageReference Include="MyCrm.TradersDocuments.Grpc" Version="1.0.4" />
+      <PackageReference Include="MyJetWallet.BitGo" Version="1.0.11" />
       <PackageReference Include="MyJetWallet.BitGo.Settings" Version="1.0.11" />
       <PackageReference Include="MyJetWallet.Domain.ExternalMarketApi" Version="1.1.6" />
       <PackageReference Include="MyJetWallet.Sdk.Authorization" Version="1.1.3" />
@@ -38,6 +39,7 @@
       <PackageReference Include="MyJetWallet.Service.BalanceHistory.Client" Version="2.1.2" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.7" />
       <PackageReference Include="MyJetWallet.Service.Bitgo.DepositDetector.Client" Version="1.1.8" />
+      <PackageReference Include="MyJetWallet.Service.BitGo.SignTransaction.Client" Version="1.1.4" />
       <PackageReference Include="MyJetWallet.Service.Bitgo.WithdrawalProcessor.Client" Version="1.1.0" />
       <PackageReference Include="MyJetWallet.Service.ChangeBalanceGateway.Client" Version="1.7.1" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.2.1" />
