--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -39,8 +39,9 @@
       <PackageReference Include="MyJetWallet.Service.BalanceHistory.Client" Version="2.1.3" />
       <PackageReference Include="MyJetWallet.Service.Balances.Client" Version="1.0.7" />
       <PackageReference Include="MyJetWallet.Service.Bitgo.DepositDetector.Client" Version="1.1.9" />
-      <PackageReference Include="MyJetWallet.Service.BitGo.SignTransaction.Client" Version="1.2.2" />
-      <PackageReference Include="MyJetWallet.Service.Bitgo.WithdrawalProcessor.Client" Version="1.1.6" />
+      <PackageReference Include="MyJetWallet.Service.BitGo.PendingApprovals.Client" Version="1.0.0" />
+      <PackageReference Include="MyJetWallet.Service.BitGo.SignTransaction.Client" Version="1.2.3" />
+      <PackageReference Include="MyJetWallet.Service.Bitgo.WithdrawalProcessor.Client" Version="1.1.7" />
       <PackageReference Include="MyJetWallet.Service.ChangeBalanceGateway.Client" Version="1.7.4" />
       <PackageReference Include="MyJetWallet.Service.ClientWallets.Client" Version="1.2.4" />
       <PackageReference Include="MyJetWallet.Service.CoinMarketCapReader.Client" Version="1.0.1" />
@@ -70,7 +71,7 @@
       <PackageReference Include="Radzen.Blazor" Version="3.9.8" />
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
       <PackageReference Include="SimpleTrading.CandlesHistory.Grpc" Version="1.0.15" />
-      <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.16" />
+      <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.18" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.9" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
       <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.59" />
