--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -53,6 +53,7 @@
       <PackageReference Include="MyJetWallet.Service.Liquidity.PortfolioHedger.Client" Version="1.1.7" />
       <PackageReference Include="MyJetWallet.Service.Liquidity.Reports.Client" Version="1.1.8" />
       <PackageReference Include="MyJetWallet.Service.MessageTemplates.Client" Version="1.0.3" />
+      <PackageReference Include="MyJetWallet.Service.NewsImporter.Client" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.NewsRepository.Client" Version="1.0.0" />
       <PackageReference Include="MyJetWallet.Service.PriceHistory.Client" Version="1.2.0" />
       <PackageReference Include="MyJetWallet.Service.PushNotification.Client" Version="1.2.4.1" />
