--- a/Backoffice/Backoffice.csproj
+++ b/Backoffice/Backoffice.csproj
@@ -74,6 +74,7 @@
       <PackageReference Include="SimpleTrading.BaseMetrics" Version="1.0.3" />
       <PackageReference Include="SimpleTrading.CandlesHistory.Grpc" Version="1.0.15" />
       <PackageReference Include="SimpleTrading.Deposit.Grpc" Version="1.2.18" />
+      <PackageReference Include="SimpleTrading.PersonalData.Grpc" Version="1.0.50" />
       <PackageReference Include="SimpleTrading.ServiceStatusReporterConnector" Version="1.0.9" />
       <PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
       <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.62" />
